--- a/pycaret.ipynb
+++ b/pycaret.ipynb
@@ -156,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "c84f46e6",
+   "id": "ed7f5eb7",
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +306,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "00fde15e",
+   "id": "5a7fb053",
    "metadata": {},
    "outputs": [
     {
@@ -583,8 +583,195 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "id": "a7e309bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<style type=\"text/css\">\n",
+       "#T_2592f_row10_col0, #T_2592f_row10_col1, #T_2592f_row10_col2, #T_2592f_row10_col3, #T_2592f_row10_col4, #T_2592f_row10_col5 {\n",
+       "  background: yellow;\n",
+       "}\n",
+       "</style>\n",
+       "<table id=\"T_2592f\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th class=\"blank level0\" >&nbsp;</th>\n",
+       "      <th id=\"T_2592f_level0_col0\" class=\"col_heading level0 col0\" >MAE</th>\n",
+       "      <th id=\"T_2592f_level0_col1\" class=\"col_heading level0 col1\" >MSE</th>\n",
+       "      <th id=\"T_2592f_level0_col2\" class=\"col_heading level0 col2\" >RMSE</th>\n",
+       "      <th id=\"T_2592f_level0_col3\" class=\"col_heading level0 col3\" >R2</th>\n",
+       "      <th id=\"T_2592f_level0_col4\" class=\"col_heading level0 col4\" >RMSLE</th>\n",
+       "      <th id=\"T_2592f_level0_col5\" class=\"col_heading level0 col5\" >MAPE</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th class=\"index_name level0\" >Fold</th>\n",
+       "      <th class=\"blank col0\" >&nbsp;</th>\n",
+       "      <th class=\"blank col1\" >&nbsp;</th>\n",
+       "      <th class=\"blank col2\" >&nbsp;</th>\n",
+       "      <th class=\"blank col3\" >&nbsp;</th>\n",
+       "      <th class=\"blank col4\" >&nbsp;</th>\n",
+       "      <th class=\"blank col5\" >&nbsp;</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th id=\"T_2592f_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+       "      <td id=\"T_2592f_row0_col0\" class=\"data row0 col0\" >1486.2811</td>\n",
+       "      <td id=\"T_2592f_row0_col1\" class=\"data row0 col1\" >3054604.8890</td>\n",
+       "      <td id=\"T_2592f_row0_col2\" class=\"data row0 col2\" >1747.7428</td>\n",
+       "      <td id=\"T_2592f_row0_col3\" class=\"data row0 col3\" >0.2134</td>\n",
+       "      <td id=\"T_2592f_row0_col4\" class=\"data row0 col4\" >0.9327</td>\n",
+       "      <td id=\"T_2592f_row0_col5\" class=\"data row0 col5\" >5.0459</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_2592f_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
+       "      <td id=\"T_2592f_row1_col0\" class=\"data row1 col0\" >1509.9101</td>\n",
+       "      <td id=\"T_2592f_row1_col1\" class=\"data row1 col1\" >3123112.3214</td>\n",
+       "      <td id=\"T_2592f_row1_col2\" class=\"data row1 col2\" >1767.2330</td>\n",
+       "      <td id=\"T_2592f_row1_col3\" class=\"data row1 col3\" >0.2099</td>\n",
+       "      <td id=\"T_2592f_row1_col4\" class=\"data row1 col4\" >0.9357</td>\n",
+       "      <td id=\"T_2592f_row1_col5\" class=\"data row1 col5\" >2.6766</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_2592f_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
+       "      <td id=\"T_2592f_row2_col0\" class=\"data row2 col0\" >1503.5700</td>\n",
+       "      <td id=\"T_2592f_row2_col1\" class=\"data row2 col1\" >3098646.5240</td>\n",
+       "      <td id=\"T_2592f_row2_col2\" class=\"data row2 col2\" >1760.2973</td>\n",
+       "      <td id=\"T_2592f_row2_col3\" class=\"data row2 col3\" >0.2193</td>\n",
+       "      <td id=\"T_2592f_row2_col4\" class=\"data row2 col4\" >0.9388</td>\n",
+       "      <td id=\"T_2592f_row2_col5\" class=\"data row2 col5\" >2.1946</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_2592f_level0_row3\" class=\"row_heading level0 row3\" >3</th>\n",
+       "      <td id=\"T_2592f_row3_col0\" class=\"data row3 col0\" >1490.2079</td>\n",
+       "      <td id=\"T_2592f_row3_col1\" class=\"data row3 col1\" >3054327.4922</td>\n",
+       "      <td id=\"T_2592f_row3_col2\" class=\"data row3 col2\" >1747.6634</td>\n",
+       "      <td id=\"T_2592f_row3_col3\" class=\"data row3 col3\" >0.2206</td>\n",
+       "      <td id=\"T_2592f_row3_col4\" class=\"data row3 col4\" >0.9207</td>\n",
+       "      <td id=\"T_2592f_row3_col5\" class=\"data row3 col5\" >3.0757</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_2592f_level0_row4\" class=\"row_heading level0 row4\" >4</th>\n",
+       "      <td id=\"T_2592f_row4_col0\" class=\"data row4 col0\" >1512.5551</td>\n",
+       "      <td id=\"T_2592f_row4_col1\" class=\"data row4 col1\" >3115128.6707</td>\n",
+       "      <td id=\"T_2592f_row4_col2\" class=\"data row4 col2\" >1764.9727</td>\n",
+       "      <td id=\"T_2592f_row4_col3\" class=\"data row4 col3\" >0.2296</td>\n",
+       "      <td id=\"T_2592f_row4_col4\" class=\"data row4 col4\" >0.9286</td>\n",
+       "      <td id=\"T_2592f_row4_col5\" class=\"data row4 col5\" >1.7317</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_2592f_level0_row5\" class=\"row_heading level0 row5\" >5</th>\n",
+       "      <td id=\"T_2592f_row5_col0\" class=\"data row5 col0\" >1495.9241</td>\n",
+       "      <td id=\"T_2592f_row5_col1\" class=\"data row5 col1\" >3055230.1784</td>\n",
+       "      <td id=\"T_2592f_row5_col2\" class=\"data row5 col2\" >1747.9217</td>\n",
+       "      <td id=\"T_2592f_row5_col3\" class=\"data row5 col3\" >0.2144</td>\n",
+       "      <td id=\"T_2592f_row5_col4\" class=\"data row5 col4\" >0.9304</td>\n",
+       "      <td id=\"T_2592f_row5_col5\" class=\"data row5 col5\" >2.7295</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_2592f_level0_row6\" class=\"row_heading level0 row6\" >6</th>\n",
+       "      <td id=\"T_2592f_row6_col0\" class=\"data row6 col0\" >1458.1523</td>\n",
+       "      <td id=\"T_2592f_row6_col1\" class=\"data row6 col1\" >2942615.7706</td>\n",
+       "      <td id=\"T_2592f_row6_col2\" class=\"data row6 col2\" >1715.4054</td>\n",
+       "      <td id=\"T_2592f_row6_col3\" class=\"data row6 col3\" >0.2433</td>\n",
+       "      <td id=\"T_2592f_row6_col4\" class=\"data row6 col4\" >0.9032</td>\n",
+       "      <td id=\"T_2592f_row6_col5\" class=\"data row6 col5\" >1.5192</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_2592f_level0_row7\" class=\"row_heading level0 row7\" >7</th>\n",
+       "      <td id=\"T_2592f_row7_col0\" class=\"data row7 col0\" >1508.3671</td>\n",
+       "      <td id=\"T_2592f_row7_col1\" class=\"data row7 col1\" >3130499.9015</td>\n",
+       "      <td id=\"T_2592f_row7_col2\" class=\"data row7 col2\" >1769.3219</td>\n",
+       "      <td id=\"T_2592f_row7_col3\" class=\"data row7 col3\" >0.1975</td>\n",
+       "      <td id=\"T_2592f_row7_col4\" class=\"data row7 col4\" >0.9388</td>\n",
+       "      <td id=\"T_2592f_row7_col5\" class=\"data row7 col5\" >2.3379</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_2592f_level0_row8\" class=\"row_heading level0 row8\" >8</th>\n",
+       "      <td id=\"T_2592f_row8_col0\" class=\"data row8 col0\" >1528.9150</td>\n",
+       "      <td id=\"T_2592f_row8_col1\" class=\"data row8 col1\" >3204669.4930</td>\n",
+       "      <td id=\"T_2592f_row8_col2\" class=\"data row8 col2\" >1790.1591</td>\n",
+       "      <td id=\"T_2592f_row8_col3\" class=\"data row8 col3\" >0.1847</td>\n",
+       "      <td id=\"T_2592f_row8_col4\" class=\"data row8 col4\" >0.9319</td>\n",
+       "      <td id=\"T_2592f_row8_col5\" class=\"data row8 col5\" >1.5767</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_2592f_level0_row9\" class=\"row_heading level0 row9\" >9</th>\n",
+       "      <td id=\"T_2592f_row9_col0\" class=\"data row9 col0\" >1531.8013</td>\n",
+       "      <td id=\"T_2592f_row9_col1\" class=\"data row9 col1\" >3182206.2593</td>\n",
+       "      <td id=\"T_2592f_row9_col2\" class=\"data row9 col2\" >1783.8739</td>\n",
+       "      <td id=\"T_2592f_row9_col3\" class=\"data row9 col3\" >0.2078</td>\n",
+       "      <td id=\"T_2592f_row9_col4\" class=\"data row9 col4\" >0.9324</td>\n",
+       "      <td id=\"T_2592f_row9_col5\" class=\"data row9 col5\" >2.1785</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_2592f_level0_row10\" class=\"row_heading level0 row10\" >Mean</th>\n",
+       "      <td id=\"T_2592f_row10_col0\" class=\"data row10 col0\" >1502.5684</td>\n",
+       "      <td id=\"T_2592f_row10_col1\" class=\"data row10 col1\" >3096104.1500</td>\n",
+       "      <td id=\"T_2592f_row10_col2\" class=\"data row10 col2\" >1759.4591</td>\n",
+       "      <td id=\"T_2592f_row10_col3\" class=\"data row10 col3\" >0.2140</td>\n",
+       "      <td id=\"T_2592f_row10_col4\" class=\"data row10 col4\" >0.9293</td>\n",
+       "      <td id=\"T_2592f_row10_col5\" class=\"data row10 col5\" >2.5066</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_2592f_level0_row11\" class=\"row_heading level0 row11\" >Std</th>\n",
+       "      <td id=\"T_2592f_row11_col0\" class=\"data row11 col0\" >20.4254</td>\n",
+       "      <td id=\"T_2592f_row11_col1\" class=\"data row11 col1\" >70836.2577</td>\n",
+       "      <td id=\"T_2592f_row11_col2\" class=\"data row11 col2\" >20.1931</td>\n",
+       "      <td id=\"T_2592f_row11_col3\" class=\"data row11 col3\" >0.0154</td>\n",
+       "      <td id=\"T_2592f_row11_col4\" class=\"data row11 col4\" >0.0100</td>\n",
+       "      <td id=\"T_2592f_row11_col5\" class=\"data row11 col5\" >0.9759</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n"
+      ],
+      "text/plain": [
+       "<pandas.io.formats.style.Styler at 0x1af3b787550>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 10 folds for each of 10 candidates, totalling 100 fits\n",
+      "Original model was better than the tuned model, hence it will be returned. NOTE: The display metrics are for the tuned model (not the original one).\n"
+     ]
+    }
+   ],
+   "source": [
+    "best_tuned = tune_model(estimator=best)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "6b0bd0df",
+   "id": "aa1e6967",
    "metadata": {},
    "outputs": [],
    "source": []
