--- a/pycaret.ipynb
+++ b/pycaret.ipynb
@@ -156,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "ed7f5eb7",
+   "id": "f8f71a27",
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +306,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "5a7fb053",
+   "id": "678de3e4",
    "metadata": {},
    "outputs": [
     {
@@ -584,7 +584,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "a7e309bf",
+   "id": "5730c190",
    "metadata": {},
    "outputs": [
     {
@@ -771,10 +771,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa1e6967",
+   "id": "baaf5530",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "final_model = fi(estimator=best_tuned)"
+   ]
   }
  ],
  "metadata": {
