--- a/pycaret.ipynb
+++ b/pycaret.ipynb
@@ -156,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "f8f71a27",
+   "id": "c54b91af",
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +306,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "678de3e4",
+   "id": "b6114a1a",
    "metadata": {},
    "outputs": [
     {
@@ -584,7 +584,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "5730c190",
+   "id": "c690645e",
    "metadata": {},
    "outputs": [
     {
@@ -770,13 +770,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "baaf5530",
+   "execution_count": 12,
+   "id": "268ed222",
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_model = fi(estimator=best_tuned)"
+    "final_model = finalize_model(estimator=best_tuned)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "e47f0bda",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "(unicode error) 'unicodeescape' codec can't decode bytes in position 2-3: truncated \\UXXXXXXXX escape (3706264364.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[14], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    save_model(model = final_model,'C:\\Users\\danca\\Music\\mlops')\u001b[0m\n\u001b[1;37m                                                               ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m (unicode error) 'unicodeescape' codec can't decode bytes in position 2-3: truncated \\UXXXXXXXX escape\n"
+     ]
+    }
+   ],
+   "source": [
+    "save_model(model = final_model,'C:\\Users\\danca\\Music\\mlops')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16e26d87",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
