--- a/EDA and preprocessing.ipynb
+++ b/EDA and preprocessing.ipynb
@@ -12,19 +12,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "3d0d1dec",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Carat Weight</th>\n",
+       "      <th>Cut</th>\n",
+       "      <th>Color</th>\n",
+       "      <th>Clarity</th>\n",
+       "      <th>Polish</th>\n",
+       "      <th>Symmetry</th>\n",
+       "      <th>Report</th>\n",
+       "      <th>Price</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.10</td>\n",
+       "      <td>Ideal</td>\n",
+       "      <td>H</td>\n",
+       "      <td>SI1</td>\n",
+       "      <td>VG</td>\n",
+       "      <td>EX</td>\n",
+       "      <td>GIA</td>\n",
+       "      <td>5169</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.83</td>\n",
+       "      <td>Ideal</td>\n",
+       "      <td>H</td>\n",
+       "      <td>VS1</td>\n",
+       "      <td>ID</td>\n",
+       "      <td>ID</td>\n",
+       "      <td>AGSL</td>\n",
+       "      <td>3470</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.85</td>\n",
+       "      <td>Ideal</td>\n",
+       "      <td>H</td>\n",
+       "      <td>SI1</td>\n",
+       "      <td>EX</td>\n",
+       "      <td>EX</td>\n",
+       "      <td>GIA</td>\n",
+       "      <td>3183</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.91</td>\n",
+       "      <td>Ideal</td>\n",
+       "      <td>E</td>\n",
+       "      <td>SI1</td>\n",
+       "      <td>VG</td>\n",
+       "      <td>VG</td>\n",
+       "      <td>GIA</td>\n",
+       "      <td>4370</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.83</td>\n",
+       "      <td>Ideal</td>\n",
+       "      <td>G</td>\n",
+       "      <td>SI1</td>\n",
+       "      <td>EX</td>\n",
+       "      <td>EX</td>\n",
+       "      <td>GIA</td>\n",
+       "      <td>3171</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Carat Weight    Cut Color Clarity Polish Symmetry Report  Price\n",
+       "0          1.10  Ideal     H     SI1     VG       EX    GIA   5169\n",
+       "1          0.83  Ideal     H     VS1     ID       ID   AGSL   3470\n",
+       "2          0.85  Ideal     H     SI1     EX       EX    GIA   3183\n",
+       "3          0.91  Ideal     E     SI1     VG       VG    GIA   4370\n",
+       "4          0.83  Ideal     G     SI1     EX       EX    GIA   3171"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
+    "# load the dataset from pycaret\n",
     "from pycaret.datasets import get_data\n",
     "dataset = get_data('diamond')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "53c51369",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## EDA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f5caefc4",
    "metadata": {},
    "outputs": [],
    "source": []
