--- a/EDA and preprocessing.ipynb
+++ b/EDA and preprocessing.ipynb
@@ -139,7 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "f6f84802",
+   "id": "a4148f2b",
    "metadata": {},
    "outputs": [
     {
@@ -11283,8 +11283,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "id": "747b1018",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data for Modeling: (5400, 8)\n",
+      "Unseen Data For Predictions (600, 8)\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = dataset.sample(frac=0.9, random_state=786)\n",
+    "data_unseen = dataset.drop(data.index)\n",
+    "\n",
+    "data.reset_index(drop=True, inplace=True)\n",
+    "data_unseen.reset_index(drop=True, inplace=True)\n",
+    "\n",
+    "print('Data for Modeling: ' + str(data.shape))\n",
+    "print('Unseen Data For Predictions ' + str(data_unseen.shape))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "faac0434",
+   "id": "e599aae4",
    "metadata": {},
    "outputs": [],
    "source": []
