--- a/model registry with mlfow.ipynb
+++ b/model registry with mlfow.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "75e5f5d3",
+   "id": "0d6160cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,8 +28,22 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "id": "2528a83d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def eval_metrics(actual, pred):\n",
+    "    rmse = np.sqrt(mean_squared_error(actual, pred))\n",
+    "    mae = mean_absolute_error(actual, pred)\n",
+    "    r2 = r2_score(actual, pred)\n",
+    "    return rmse, mae, r2"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "61313795",
+   "id": "3f897db9",
    "metadata": {},
    "outputs": [],
    "source": []
