--- a/model registry with mlfow.ipynb
+++ b/model registry with mlfow.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "0d6160cb",
+   "id": "9442b26d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "2528a83d",
+   "id": "62533e16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,8 +42,89 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "357d029d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Elasticnet model (alpha=0.500000, l1_ratio=0.500000):\n",
+      "  RMSE: 0.7931640229276851\n",
+      "  MAE: 0.6271946374319587\n",
+      "  R2: 0.10862644997792614\n"
+     ]
+    }
+   ],
+   "source": [
+    "if __name__ == \"__main__\":\n",
+    "    \n",
+    "    warnings.filterwarnings(\"ignore\")\n",
+    "    np.random.seed(40)\n",
+    "\n",
+    "    # Read the wine-quality csv file from the URL\n",
+    "    csv_url = (\n",
+    "        \"http://archive.ics.uci.edu/ml/machine-learning-databases/wine-quality/winequality-red.csv\"\n",
+    "    )\n",
+    "    try:\n",
+    "        data = pd.read_csv(csv_url, sep=\";\")\n",
+    "        \n",
+    "    except Exception as e:\n",
+    "        logger.exception(\n",
+    "            \"Unable to download training & test CSV, check your internet connection. Error: %s\", e\n",
+    "        )\n",
+    "\n",
+    "    # Split the data into training and test sets. (0.75, 0.25) split.\n",
+    "    train, test = train_test_split(data)\n",
+    "\n",
+    "    # The predicted column is \"quality\" which is a scalar from [3, 9]\n",
+    "    train_x = train.drop([\"quality\"], axis=1)\n",
+    "    test_x = test.drop([\"quality\"], axis=1)\n",
+    "    train_y = train[[\"quality\"]]\n",
+    "    test_y = test[[\"quality\"]]\n",
+    "\n",
+    "    alpha = 0.5\n",
+    "    l1_ratio = 0.5\n",
+    "\n",
+    "    with mlflow.start_run():\n",
+    "        \n",
+    "        lr = ElasticNet(alpha=alpha, l1_ratio=l1_ratio, random_state=42)\n",
+    "        lr.fit(train_x, train_y)\n",
+    "\n",
+    "        predicted_qualities = lr.predict(test_x)\n",
+    "\n",
+    "        (rmse, mae, r2) = eval_metrics(test_y, predicted_qualities)\n",
+    "\n",
+    "        print(\"Elasticnet model (alpha=%f, l1_ratio=%f):\" % (alpha, l1_ratio))\n",
+    "        print(\"  RMSE: %s\" % rmse)\n",
+    "        print(\"  MAE: %s\" % mae)\n",
+    "        print(\"  R2: %s\" % r2)\n",
+    "\n",
+    "        mlflow.log_param(\"alpha\", alpha)\n",
+    "        mlflow.log_param(\"l1_ratio\", l1_ratio)\n",
+    "        mlflow.log_metric(\"rmse\", rmse)\n",
+    "        mlflow.log_metric(\"r2\", r2)\n",
+    "        mlflow.log_metric(\"mae\", mae)\n",
+    "\n",
+    "        tracking_url_type_store = urlparse(mlflow.get_tracking_uri()).scheme\n",
+    "\n",
+    "        # Model registry does not work with file store\n",
+    "        if tracking_url_type_store != \"file\":\n",
+    "\n",
+    "            # Register the model\n",
+    "            # There are other ways to use the Model Registry, which depends on the use case,\n",
+    "            # please refer to the doc for more information:\n",
+    "            # https://mlflow.org/docs/latest/model-registry.html#api-workflow\n",
+    "            mlflow.sklearn.log_model(lr, \"model\", registered_model_name=\"ElasticnetWineModel\")\n",
+    "        else:\n",
+    "            mlflow.sklearn.log_model(lr, \"model\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "3f897db9",
+   "id": "751dc701",
    "metadata": {},
    "outputs": [],
    "source": []
