--- a/mlops with pycaret and mlflow.ipynb
+++ b/mlops with pycaret and mlflow.ipynb
@@ -139,7 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "dc49cc6e",
+   "id": "9e39eabb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "178c5358",
+   "id": "231fc4e2",
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +324,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "30ce7886",
+   "id": "ddb42682",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "1043033b",
+   "id": "57dccbd5",
    "metadata": {},
    "outputs": [
     {
@@ -601,11 +601,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6335c1fc",
+   "execution_count": 9,
+   "id": "70b004ce",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Check residuals of the trained model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "99685ca4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plot_model = "
+   ]
   }
  ],
  "metadata": {
