finalizing and saving model

--- a/mlops with pycaret and mlflow.ipynb
+++ b/mlops with pycaret and mlflow.ipynb
@@ -139,7 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "dc83e46c",
+   "id": "69d62599",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "fb9588b1",
+   "id": "3ccc61f2",
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +324,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "8183fde8",
+   "id": "08993bdb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "76d8f09a",
+   "id": "a817572e",
    "metadata": {},
    "outputs": [
     {
@@ -602,7 +602,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "b4ecb6c9",
+   "id": "ca1c09b7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -612,7 +612,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "d1c48514",
+   "id": "bc52dbb1",
    "metadata": {},
    "outputs": [
     {
@@ -643,7 +643,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "27c225fe",
+   "id": "d418a177",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -653,7 +653,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "4c8013a4",
+   "id": "b2566efd",
    "metadata": {},
    "outputs": [
     {
@@ -683,11 +683,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "50eeb56c",
+   "execution_count": 14,
+   "id": "0f29d983",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# finalizing the model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f6fe0d5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final_model = finalize_model(best)\n",
+    "\n",
+    "# Saving final model\n"
+   ]
   }
  ],
  "metadata": {
