finalizing and saving model

--- a/mlops with pycaret and mlflow.ipynb
+++ b/mlops with pycaret and mlflow.ipynb
@@ -139,7 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "69d62599",
+   "id": "15900925",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "3ccc61f2",
+   "id": "03255a84",
    "metadata": {},
    "outputs": [
     {
@@ -324,7 +324,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "08993bdb",
+   "id": "8c6ce5e7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -334,7 +334,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "a817572e",
+   "id": "171da1fe",
    "metadata": {},
    "outputs": [
     {
@@ -602,7 +602,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "ca1c09b7",
+   "id": "3e8ba7e3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -612,7 +612,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "bc52dbb1",
+   "id": "1ac7ab7f",
    "metadata": {},
    "outputs": [
     {
@@ -643,7 +643,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "d418a177",
+   "id": "b97b4ffe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -653,7 +653,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "b2566efd",
+   "id": "5acb856e",
    "metadata": {},
    "outputs": [
     {
@@ -684,7 +684,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "0f29d983",
+   "id": "601b7eb7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -693,15 +693,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5f6fe0d5",
+   "execution_count": 15,
+   "id": "60f78faa",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Transformation Pipeline and Model Successfully Saved\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(Pipeline(memory=FastMemory(location=C:\\Users\\danca\\AppData\\Local\\Temp\\joblib),\n",
+       "          steps=[('target_transformation',\n",
+       "                  TransformerWrapperWithInverse(transformer=TargetTransformer(estimator=PowerTransformer(standardize=False)))),\n",
+       "                 ('numerical_imputer',\n",
+       "                  TransformerWrapper(include=['Carat Weight'],\n",
+       "                                     transformer=SimpleImputer())),\n",
+       "                 ('categorical_imputer',\n",
+       "                  TransformerWra...\n",
+       " dtype: int64}]))),\n",
+       "                 ('onehot_encoding',\n",
+       "                  TransformerWrapper(include=['Cut', 'Color', 'Clarity',\n",
+       "                                              'Polish', 'Symmetry'],\n",
+       "                                     transformer=OneHotEncoder(cols=['Cut',\n",
+       "                                                                     'Color',\n",
+       "                                                                     'Clarity',\n",
+       "                                                                     'Polish',\n",
+       "                                                                     'Symmetry'],\n",
+       "                                                               handle_missing='return_nan',\n",
+       "                                                               use_cat_names=True))),\n",
+       "                 ('clean_column_names',\n",
+       "                  TransformerWrapper(transformer=CleanColumnNames())),\n",
+       "                 ('actual_estimator', LGBMRegressor(random_state=6808))]),\n",
+       " 'diamond pipeline.pkl')"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "final_model = finalize_model(best)\n",
     "\n",
-    "# Saving final model\n"
+    "# Saving final model\n",
+    "save_model(final_model,'diamond pipeline')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68d96796",
+   "metadata": {},
+   "source": [
+    "# model management with mlfow"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "506875f7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#!mlflow ui\n",
+    "#localhost:5000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ca141288",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
